<resources>
    <string name="app_name">NanoDegree Movie App 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">Movie Title</string>
    <string name="action_settings">Settings</string>

    <string name="title_popular_movies">Popular Movies</string>
    <string name="title_rated_movies">Top Rated Movies</string>
    <string name="action_sort_by_popularity">Sort by Popularity</string>
    <string name="action_sort_by_rating">Sort by Rating</string>

    <string name="template_vote_average">%1$.2f / 5.0</string>
    <plurals name="template_vote_count">
        <item quantity="one">%d vote</item>
        <item quantity="other">%d votes</item>
    </plurals>
    <string name="template_release_date">Released %1$s</string>
    <string name="something_went_wrong">Something went wrong???</string>
    <string name="try_again">Try Again</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="trailer">Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="make_favorite">Make Favorite</string>
    <string name="remove_from_favourite">Remove From Favourite</string>
    <string name="favourite">Favourite</string>
</resources>
