<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MovieDetailActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:popupTheme="@style/Widget.MaterialComponents.AppBarLayout.Primary"
            app:titleTextColor="#FFFFFFFF" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_tittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#3E9187"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/movie_poster"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tittle" />

    <TextView
        android:id="@+id/text_release_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toTopOf="@+id/image_poster" />

    <TextView
        android:id="@+id/text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/text_release_year"
        app:layout_constraintStart_toStartOf="@+id/text_release_year"
        app:layout_constraintTop_toBottomOf="@+id/text_release_year" />

    <TextView
        android:id="@+id/text_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_poster" />

    <TextView
        android:id="@+id/textTrailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/trailer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_overview"
        app:layout_constraintTop_toBottomOf="@id/text_overview"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trailerRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="@id/text_overview"
        app:layout_constraintStart_toStartOf="@id/text_overview"
        app:layout_constraintTop_toBottomOf="@id/textTrailer"
        tools:listitem="@layout/list_item_trailer" />

    <TextView
        android:id="@+id/textReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reviews"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/trailerRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/trailerRecyclerView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviewRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="@id/text_overview"
        app:layout_constraintStart_toStartOf="@id/text_overview"
        app:layout_constraintTop_toBottomOf="@id/textReview"
        tools:listitem="@layout/review_list_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/text_rating" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_from_favourite"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/text_rating" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>